<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:text="@string/audio_equlizer"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@+id/seekBar16"
        tools:layout_editor_absoluteY="170dp" />

    <SeekBar
        android:id="@+id/seekBar30"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar29"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar28"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar27"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar26"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar25"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar24"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar23"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar16"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:rotation="270"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="313dp"
        android:layout_marginLeft="313dp"
        android:text="@string/_19_2k"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="283dp"
        android:layout_marginLeft="283dp"
        android:text="@string/_49_6k"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="253dp"
        android:layout_marginLeft="253dp"
        android:text="@string/_4_8k"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="223dp"
        android:layout_marginLeft="223dp"
        android:text="@string/_2_4k"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginLeft="193dp"
        android:text="@string/_1_2k"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:text="@string/_600"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:text="@string/_300"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:text="@string/_150"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_75"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="531dp" />

</androidx.constraintlayout.widget.ConstraintLayout>